# ReportForge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
reportforge/: __init__.py  cli.py  utils.py
reportforge/backend/: app.py  db.py  models.py  requirements.txt
reportforge/frontend/: index.html
