[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reportforge"
version = "1.2.3"
description = "Web-based security report writing tool with custom template builder"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "weasyprint>=60.0",
  "python-docx>=1.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
]

[project.scripts]
reportforge = "reportforge.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["reportforge*"]

[tool.setuptools.package-data]
"reportforge.frontend" = ["*.html"]
